CI: adjust GitHub actions (#6)
- Added badges to the project branches and test coverage
- Removed front-end deployment files
- Adapted the PR open/close and merge to main branch workflows, adding
  usage of SonarQube and registering test coverage
- Modified Docker image
- Configured Google code style checks
- Created sample tests
- Modified POM file to accommodate the previous changes